--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,12 @@ jobs:
       - id: isDeployHeroku # TODO
         # if: ${{ github.event.inputs.actions  == 'start'}}
         run: echo "::set-output name=action::false"
+  output:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo needs.jobenv.outputs.deploy is ${{needs.jobenv.outputs.deploy}}
+      - run: echo needs.jobenv.outputs.stop is ${needs.jobenv.outputs.stop}}
+      - run: echo needs.jobenv.outputs.start is ${{needs.jobenv.outputs.start}}
   heroku-deploy:
     if: ${{ github.event.inputs.actions == 'deploy' || needs.jobenv.outputs.deploy == 'true' }}
     runs-on: ubuntu-latest
