add support for cron job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo needs.jobenv.outputs.deploy is ${{needs.jobenv.outputs.deploy}}
-      - run: echo needs.jobenv.outputs.stop is ${needs.jobenv.outputs.stop}}
+      - run: echo needs.jobenv.outputs.stop is ${{needs.jobenv.outputs.stop}}
       - run: echo needs.jobenv.outputs.start is ${{needs.jobenv.outputs.start}}
   heroku-deploy:
     if: ${{ github.event.inputs.actions == 'deploy' || needs.jobenv.outputs.deploy == 'true' }}
