--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,8 @@ jobs:
           justlogin: true
       - run: |
           echo action is ${{ github.event.inputs.actions }}
+          echo needs.jobenv.outputs.stop is ${{needs.jobenv.outputs.stop}}
+          echo needs.jobenv.outputs.start is ${{needs.jobenv.outputs.start}}
           if [[ ${{ needs.jobenv.outputs.stop}} == 'true' ]]; then heroku ps:scale web=0 -a ${{secrets.APP_NAME}} && echo "stop"; fi
           if [[ ${{ needs.jobenv.outputs.start}} == 'true' ]]; then heroku ps:scale web=1 -a ${{secrets.APP_NAME}} && echo "start"; fi
           heroku ps -a ${{secrets.APP_NAME}}
