--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,11 @@
       "program": "C:\\github\\edgetunnel\\apps\\deno-vless\\src\\main.ts",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "C:\\Users\\zizifn\\scoop\\shims\\deno.EXE",
-      "runtimeArgs": ["run", "--inspect", "--allow-all"],
-      "attachSimplePort": 9229
+      "runtimeArgs": ["run", "--inspect", "--allow-all", "--unstable"],
+      "attachSimplePort": 9229,
+      "env": {
+        "UUID": ""
+      }
     }
   ]
 }
