--- a/apps/cf-worker-vless/wrangler.toml
+++ b/apps/cf-worker-vless/wrangler.toml
@@ -12,3 +12,6 @@ routes = [{ pattern = "cf-vless.zizi.press", custom_domain = true }]
 
 [env.dev.vars]
 TEST_VAR = "TEST_VAR_DEV"
+
+[env.prod.vars]
+TEST_VAR = "TEST_VAR_PROD"
