--- a/apps/cf-worker-vless/wrangler.toml
+++ b/apps/cf-worker-vless/wrangler.toml
@@ -1,4 +1,4 @@
-name = "my-vless" # todo
+name = "" # todo
 main = "./src/main.ts"
 compatibility_date = "2022-05-03"
 workers_dev = true # should be deployed to *.workers.dev
@@ -12,6 +12,9 @@ routes = [{ pattern = "cf-vless.zizi.press", custom_domain = true }]
 
 [env.dev.vars]
 TEST_VAR = "TEST_VAR_DEV"
+
+[env.prod]
+name = "my-vless-prod"
 
 [env.prod.vars]
 TEST_VAR = "TEST_VAR_PROD"
