--- a/.github/workflows/cf-worker-deploy.yml
+++ b/.github/workflows/cf-worker-deploy.yml
@@ -11,6 +11,10 @@ on:
         description: 'Choose an environment to deploy to: <dev|staging|prod>'
         required: true
         default: 'dev'
+      name:
+        description: 'Choose an environment to deploy to: <dev|staging|prod>'
+        required: true
+        default: 'my-vless-prod'
 
 jobs:
   deploy:
@@ -23,7 +27,7 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          command: publish --env ${{ github.event.inputs.environment || 'prod' }}
+          command: publish --env ${{ github.event.inputs.environment || 'prod' }} --name ${{ github.event.inputs.name }}
           workingDirectory: 'apps/cf-worker-vless'
           secrets: |
             UUID
