--- a/.github/workflows/cf-worker-deploy.yml
+++ b/.github/workflows/cf-worker-deploy.yml
@@ -6,11 +6,6 @@ on:
       - main
       - test-cf
   workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Choose an environment to deploy to: <dev|staging|prod>'
-        required: true
-        default: 'dev'
 
 jobs:
   deploy:
@@ -19,13 +14,20 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v2
+      - name: envsubst
+        if: ${{github.event.inputs.turn_k8s_base_app == 'ON'}}
+        run: |
+          envsubst < apps/cf-worker-vless/wrangler.toml.tp > apps/cf-worker-vless/wrangler.toml
+          echo cf_environment="custom" >> $GITHUB_ENV
+        env:
+          CUSTOM_DOMAIN: ${{ secrets.CUSTOM_DOMAIN }}
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          command: publish --env ${{ github.event.inputs.environment || 'prod' }}
+          command: publish --env ${{ env.cf_environment || 'default' }}
           workingDirectory: 'apps/cf-worker-vless'
-          environment: ${{ github.events.inputs.environment || 'prod' }}
+          environment: ${{ env.cf_environment || 'default' }}
           secrets: |
             UUID
         env:
