refactor vless code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
       "runtimeArgs": ["run", "--inspect", "--allow-all", "--unstable"],
       "attachSimplePort": 9229,
       "env": {
-        "UUID": ""
+        "UUID": "e0a102c8-51c8-436c-860b-ef279d8a6ada"
       }
     }
   ]
