--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist
-!dist/cf-page
+# https://theapache64.github.io/git-do-not-ignore/
+!dist/
+dist/*
+!dist/apps/
+dist/apps/*
+!dist/apps/cf-page
+
 tmp
 /out-tsc
 
