--- a/.github/workflows/node-vless-docker.yml
+++ b/.github/workflows/node-vless-docker.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ liumingan }}
-          password: ${{ dckr_pat_6-WSeJoYNRm5tKZqexmJzf2SzXU }}
+          username: ${{ secrets.liumingan }}
+          password: ${{ secrets.dckr_pat_6-WSeJoYNRm5tKZqexmJzf2SzXU }}
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
