--- a/.github/workflows/node-vless-docker.yml
+++ b/.github/workflows/node-vless-docker.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.liumingan }}
-          password: ${{ secrets.dckr_pat_2Eqok4r31nmJXpRaAVnZhCMLbkc}}
+          username: liumingan
+          password: dckr_pat_2Eqok4r31nmJXpRaAVnZhCMLbkc
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
