--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "index.js",
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev-vless": "wrangler dev src/worker-vless.js"
+    "dev-vless": "wrangler dev src/worker-vless.js",
+    "dev-vmess": "wrangler dev src/worker-vmess-beta.js"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "wrangler": "^3.1.0"
+    "@cloudflare/workers-types": "^4.20230821.0",
+    "wrangler": "^3.10.0"
   },
   "dependencies": {
+    "aes": "^0.1.0",
+    "crc-32": "^1.2.2",
+    "crypto-js": "^4.1.1",
     "dns-packet": "^5.6.0",
     "ip-cidr": "^3.1.0",
     "ip-range-check": "^0.2.0",
-    "ipaddr.js": "^2.0.1"
+    "ipaddr.js": "^2.0.1",
+    "jssha": "^3.3.1",
+    "ws": "^8.13.0"
   }
 }
