--- a/Clash/config/ACL4SSR_Online_Full_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_MultiMode.ini
@@ -83,5 +83,7 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
-
+emoji=(应急),🆘
+emoji=(安全),🔐
+emoji=(ChatGPT),🤖
 ;luck
