--- a/Clash/config/All_Online_Full_MultiMode.ini
+++ b/Clash/config/All_Online_Full_MultiMode.ini
@@ -78,7 +78,7 @@ custom_proxy_group=🇹🇼 台湾节点`load-balance`(台|新北|彰化|TW|Taiw
 custom_proxy_group=🇸🇬 狮城节点`load-balance`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`load-balance`(KR|Korea|KOR|首尔|韩|韓|ICN)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=☎️ 电信优选`load-balance`(电信|CT)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📱 移动优选`load-balance`(移动|CMCC|CM)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📱 移动优选`load-balance`(移动|CMCC)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
