--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,20 @@
-name = "cf-worker-ws-dev-0415" # todo
+name = "dendikusnandi" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
-
 #main = "test/worker/worker-connect-test.js"
 main = "src/worker-vless.js"
-
 compatibility_date = "2024-04-15"
+[[routes]]
+pattern = "ids.derista.tech"
+custom_domain = true
+[[routes]]
+pattern = "quiz.vidio.com.ids.derista.tech"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.comids.derista.tech"
+custom_domain = true
+
 
 [vars]
 # UUID = "example_dev_token"
+UUID = "d99ac935-16b2-4791-b9eb-08fc9512a619"
